# inference-tracking

./: .gitignore  MLFLOW_INTEGRATION_WITH_PROMETHEUS.md  README.md  grafana-config-map.yml  grafana-depoyment.yml  grafana-pvc.yml  inference-tracking_backup.py  inference_tracking.py  integration-with-prometheus.py  main.py  otel_collector_config.yml  prometheus.yml  pyproject.toml  test-file-2.py  test-hf.py  time=2025-09-19T17:01:43.968Z level=INFO  tracing_ollama.ipynb
grafana/: grafana.ini
grafana/grafana_provisioning/dashboards/: AIOps-1758717969554.json  Data Scientists-1758717983501.json  Executive & Leadership Team-1758717993626.json  New dashboard-1758691631219.json
grafana/grafana_provisioning/datasources/: prometheus-datasource.yml
