[project]
name = "test-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "evaluate>=0.4.6",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "mlflow>=3.4.0",
    "openai>=1.108.0",
    "textstat>=0.7.10",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
